# rust-alipay-sdk

./: Cargo.toml  README.md
examples/: trade_page_pay.rs
examples/fixtures/: app-private-key.pem
src/: alipay.rs  antcertutil.rs  error.rs  form.rs  lib.rs  product_code.rs  time.rs  util.rs
src/model/: alipay_trade_pay_model.rs  business_params.rs  extend_params.rs  goods_detail.rs  invoice_info.rs  invoice_key_info.rs  mod.rs  promo_param.rs  sub_merchant.rs
src/request/: alipay_trade_pay_request.rs  mod.rs
