[package]
name = "rust_alipay_sdk"
license = "MIT"
version = "0.1.0"
edition = "2018"
authors = ["thep0y"]
description = "AliPay Sdk for Rust"
homepage = "https://github.com/thep0y/rust-alipay-sdk"
repository = "https://github.com/thep0y/rust-alipay-sdk"
keywords = ["alipay","alipay-sdk","alipay-rs"]
categories= ["api-bindings","accessibility","development-tools","compilers"]

[dependencies]
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
