[package]
name = "rust_alipay_sdk"
license = "MIT"
version = "0.1.0"
edition = "2018"
authors = ["thep0y"]
description = "AliPay Sdk for Rust"
homepage = "https://github.com/thep0y/rust-alipay-sdk"
repository = "https://github.com/thep0y/rust-alipay-sdk"
keywords = ["alipay", "alipay-sdk", "alipay-rs"]
categories = ["api-bindings", "accessibility", "development-tools", "compilers"]

[dependencies]
aes = "0.8"
base64 = "0.21.3"
base64ct = { version = "1.6.0", features = ["alloc", "std"] }
cbc = "0.1"
convert_case = "0.6.0"
log = "0.4.20"
md5 = "0.7.0"
rand = "0.8.5"
rsa = { version = "0.9.2", features = ["sha2", "pem"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.47"
time = "0.3.28"
ureq = { version = "2.7.1", features = ["json"] }
url = "2.4.1"
urlencoding = "2.1.3"
x509-parser = "0.15.1"

[dev-dependencies]
env_logger = "0.10"
