[package]
name = "rust_alipay_sdk"
license = "MIT"
version = "0.1.0"
edition = "2018"
authors = ["thep0y"]
description = "AliPay Sdk for Rust"
homepage = "https://github.com/thep0y/rust-alipay-sdk"
repository = "https://github.com/thep0y/rust-alipay-sdk"
keywords = ["alipay", "alipay-sdk", "alipay-rs"]
categories = ["api-bindings", "accessibility", "development-tools", "compilers"]

[dependencies]
aes = "0.8"
base64ct = { version = "1.6", features = ["alloc", "std"] }
cbc = "0.1"
convert_case = "0.6.0"
log = "0.4"
md5 = "0.7"
rand = "0.8"
rsa = { version = "0.9", features = ["sha2", "pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = "0.3"
ureq = { version = "2", features = ["json"] }
url = "2"
urlencoding = "2"
x509-parser = "0.15"

[dev-dependencies]
env_logger = "0.10"
